src/app/app.component.scss
@import '../styles.scss';

.l-fluid-breakout__main {
  margin: $sph--large;
}

.p-card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  border-radius: $spv--x-small;
  border-top: 3px solid $color-accent;
  box-shadow: 0 0 0.375rem 0 transparentize($color-x-dark, 0.8);
}

header.p-card__content {
  padding-bottom: $spv--small;
  font-size: 0.875rem;
  text-transform: uppercase;
}

footer.p-card__content {
  padding-top: $spv--medium;
  font-size: 0.875rem;
}

.comparison {
  padding: calc(2 * $sph--x-large);
  box-sizing: border-box;
  max-width: 100vw;
}

